--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,10 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
@@ -51,6 +55,16 @@
                         <version>8.0.28</version>
                     </dependency>
                 </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <version>7.4.0</version>
+                <configuration>
+                    <url>jdbc:mysql://localhost:3306/accounting?useSSL=false</url>
+                    <user>root</user>
+                    <password>123</password>
+                </configuration>
             </plugin>
         </plugins>
     </build>
